--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,34 @@
 version: "3"
 services:
   web:
-    build: .
+    build: ./web
     ports:
-      - "5000:5000"
+      - "80:80"
     depends_on:
       - redis
+    networks:
+      - webnet
+    volumes:
+      - ./job/slow_job.py:/app/slow_job.py:ro
+  worker:
+    build: ./worker
+    depends_on:
+      - redis
+      - web
+    networks:
+      - webnet
+    volumes:
+      - ./job/slow_job.py:/app/slow_job.py:ro
   redis:
     image: "redis:4.0.9-alpine"
+    ports:
+      - "6379:6379"
+    networks:
+      - webnet
+    volumes:
+      - db_data:/data
+    command: redis-server --appendonly yes
+networks:
+  webnet:
+volumes:
+  db_data:
